--- a/apps/teambuilder/templates/teambuilder/index.html
+++ b/apps/teambuilder/templates/teambuilder/index.html
@@ -47,37 +47,37 @@
                   <tbody>
                     <tr>
                       <td>HP:</td>
-                      <td id='base_hp'></td>
+                      <td id='base_hp'><input type='hidden' name='hp_base'></td>
                       <td><input type='text' name='hp_iv' value='31'></td>
                       <td><input type='text' name='hp_ev' value='0'></td>
                     </tr>
                     <tr>
                       <td>Attack:</td>
-                      <td id='base_atk'></td>
+                      <td id='base_atk'><input type='hidden' name='atk_base'></td>
                       <td><input type='text' name='atk_iv' value='31'></td>
                       <td><input type='text' name='atk_ev' value='0'></td>
                     </tr>
                     <tr>
                       <td>Defense:</td>
-                      <td id='base_def'></td>
+                      <td id='base_def'><input type='hidden' name='def_base'></td>
                       <td><input type='text' name='def_iv' value='31'></td>
                       <td><input type='text' name='def_ev' value='0'></td>
                     </tr>
                     <tr>
                       <td>Special Attack</td>
-                      <td id='base_spa'></td>
+                      <td id='base_spa'><input type='hidden' name='spa_base'></td>
                       <td><input type='text' name='spa_iv' value='31'></td>
                       <td><input type='text' name='spa_ev' value='0'></td>
                     </tr>
                     <tr>
                       <td>Special Defense</td>
-                      <td id='base_spd'></td>
+                      <td id='base_spd'><input type='hidden' name='spd_base'></td>
                       <td><input type='text' name='spd_iv' value='31'></td>
                       <td><input type='text' name='spd_ev' value='0'></td>
                     </tr>
                     <tr>
                       <td>Speed</td>
-                      <td id='base_spe'></td>
+                      <td id='base_spe'><input type='hidden' name='spe_base'></td>
                       <td><input type='text' name='spe_iv' value='31'></td>
                       <td><input type='text' name='spe_ev' value='0'></td>
                     </tr>
